--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     driver: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/course-management
     username: postgres
-    password: 123456789
+    password: postgres
     initialSize: 5
     minIdle: 5
     maxActive: 20
@@ -33,6 +33,6 @@ spring:
 jwt:
   secret: JWTSuperSecretKey
 server:
-  port: 8081
+  port: 8083
   servlet:
     context-path: /api
