--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     driver: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/course-management
     username: postgres
-    password: 123
+    password: postgres
     initialSize: 5
     minIdle: 5
     maxActive: 20
